--- a/zammad/templates/configmap-nginx.yaml
+++ b/zammad/templates/configmap-nginx.yaml
@@ -87,10 +87,11 @@ data:
         }
 
         location / {
+            proxy_http_version 1.1;
             {{- if .Values.zammadConfig.nginx.knowledgeBaseUrl }}
             proxy_set_header X-ORIGINAL-URL $request_uri;
             {{- end }}
-            proxy_http_version 1.1;
+            proxy_set_header Host $http_host;
             proxy_set_header CLIENT_IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             {{- range .Values.zammadConfig.nginx.extraHeaders }}
